small tweak to fix hover state on mobile

--- a/src/stylesheets/components/_hero-section.scss
+++ b/src/stylesheets/components/_hero-section.scss
@@ -88,7 +88,9 @@
       font-weight: bold;
       letter-spacing: .3em;
       margin-bottom: 10px;
+      position: relative;
       text-transform: uppercase;
+      z-index: 1;
 
       @include breakpoint('large') {
         font-size: $font-size-large;
